k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
    - name: "http"
      port: 5000
      targetPort: 5000
  selector:
    app: backend
